libs/align/zz_samextract-grammar.output
Grammar

    0 $accept: sam "end of file"

    1 sam: ε
    2    | sam line

    3 line: EOL
    4     | CONTROLCHAR
    5     | comment
    6     | header
    7     | sequence
    8     | program
    9     | readgroup
   10     | alignment

   11 comment: COMMENT

   12 header: HEADER headerlist EOL

   13 headerlist: hdr
   14           | headerlist hdr

   15 hdr: HDVN VALUE
   16    | HDSO VALUE
   17    | HDGO VALUE
   18    | TAB

   19 sequence: SEQUENCE sequencelist EOL

   20 sequencelist: sq
   21             | sequencelist sq

   22 sq: SQSN VALUE
   23   | SQLN VALUE
   24   | SQAS VALUE
   25   | SQM5 VALUE
   26   | SQSP VALUE
   27   | SQUR VALUE
   28   | TAB

   29 program: PROGRAM programlist EOL

   30 programlist: pg
   31            | programlist pg

   32 pg: PGID VALUE
   33   | PGPN VALUE
   34   | PGCL VALUE
   35   | PGPP VALUE
   36   | PGDS VALUE
   37   | PGVN VALUE
   38   | VALUE

   39 readgroup: READGROUP readgrouplist EOL

   40 readgrouplist: rg
   41              | readgrouplist rg

   42 rg: RGID VALUE
   43   | RGPL VALUE
   44   | RGCN VALUE
   45   | RGDS VALUE
   46   | RGDT VALUE
   47   | RGFO VALUE
   48   | RGKS VALUE
   49   | RGLB VALUE
   50   | RGPG VALUE
   51   | RGPI VALUE
   52   | RGPM VALUE
   53   | RGPU VALUE
   54   | RGSM VALUE
   55   | VALUE VALUE
   56   | TAB TAB EOL
   57   | TAB EOL

   58 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL EOL
   59          | QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL optlist EOL

   60 optlist: opt
   61        | optlist opt

   62 opt: OPTTAG OPTATYPE OPTAVALUE
   63    | OPTTAG OPTITYPE OPTIVALUE
   64    | OPTTAG OPTFTYPE OPTFVALUE
   65    | OPTTAG OPTZTYPE OPTZVALUE
   66    | OPTTAG OPTHTYPE OPTHVALUE
   67    | OPTTAG OPTBTYPE OPTBVALUE
   68    | OPTITAG OPTITYPE OPTIVALUE
   69    | OPTZTAG OPTZTYPE OPTZVALUE
   70    | OPTBTAG OPTBTYPE OPTBVALUE


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    HEADER <strval> (258) 12
    SEQUENCE <strval> (259) 19
    READGROUP <strval> (260) 39
    PROGRAM <strval> (261) 29
    COMMENT <strval> (262) 11
    VALUE <strval> (263) 15 16 17 22 23 24 25 26 27 32 33 34 35 36 37 38 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    QNAME <strval> (264) 58 59
    FLAG <strval> (265) 58 59
    RNAME <strval> (266) 58 59
    POS <strval> (267) 58 59
    MAPQ <strval> (268) 58 59
    CIGAR <strval> (269) 58 59
    RNEXT <strval> (270) 58 59
    PNEXT <strval> (271) 58 59
    TLEN <strval> (272) 58 59
    SEQ <strval> (273) 58 59
    QUAL <strval> (274) 58 59
    OPTTAG <strval> (275) 62 63 64 65 66 67
    OPTITAG <strval> (276) 68
    OPTZTAG <strval> (277) 69
    OPTBTAG <strval> (278) 70
    OPTATYPE <strval> (279) 62
    OPTITYPE <strval> (280) 63 68
    OPTFTYPE <strval> (281) 64
    OPTZTYPE <strval> (282) 65 69
    OPTHTYPE <strval> (283) 66
    OPTBTYPE <strval> (284) 67 70
    OPTAVALUE <strval> (285) 62
    OPTIVALUE <strval> (286) 63 68
    OPTFVALUE <strval> (287) 64
    OPTZVALUE <strval> (288) 65 69
    OPTHVALUE <strval> (289) 66
    OPTBVALUE <strval> (290) 67 70
    HDVN (291) 15
    HDSO (292) 16
    HDGO (293) 17
    RGID <strval> (294) 42
    RGCN <strval> (295) 44
    RGDS <strval> (296) 45
    RGDT <strval> (297) 46
    RGFO <strval> (298) 47
    RGKS <strval> (299) 48
    RGLB <strval> (300) 49
    RGPG <strval> (301) 50
    RGPI <strval> (302) 51
    RGPL <strval> (303) 43
    RGPM <strval> (304) 52
    RGPU <strval> (305) 53
    RGSM <strval> (306) 54
    PGID <strval> (307) 32
    PGPN <strval> (308) 33
    PGCL <strval> (309) 34
    PGPP <strval> (310) 35
    PGDS <strval> (311) 36
    PGVN <strval> (312) 37
    SQSN <strval> (313) 22
    SQLN <strval> (314) 23
    SQAS <strval> (315) 24
    SQM5 <strval> (316) 25
    SQSP <strval> (317) 26
    SQUR <strval> (318) 27
    TAB (319) 18 28 56 57
    CONTROLCHAR <strval> (320) 4
    EOL (321) 3 12 19 29 39 56 57 58 59


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    sam (68)
        on left: 1 2
        on right: 0 2
    line (69)
        on left: 3 4 5 6 7 8 9 10
        on right: 2
    comment (70)
        on left: 11
        on right: 5
    header (71)
        on left: 12
        on right: 6
    headerlist (72)
        on left: 13 14
        on right: 12 14
    hdr (73)
        on left: 15 16 17 18
        on right: 13 14
    sequence (74)
        on left: 19
        on right: 7
    sequencelist (75)
        on left: 20 21
        on right: 19 21
    sq (76)
        on left: 22 23 24 25 26 27 28
        on right: 20 21
    program (77)
        on left: 29
        on right: 8
    programlist (78)
        on left: 30 31
        on right: 29 31
    pg (79)
        on left: 32 33 34 35 36 37 38
        on right: 30 31
    readgroup (80)
        on left: 39
        on right: 9
    readgrouplist (81)
        on left: 40 41
        on right: 39 41
    rg (82)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 40 41
    alignment (83)
        on left: 58 59
        on right: 10
    optlist (84)
        on left: 60 61
        on right: 59 61
    opt (85)
        on left: 62 63 64 65 66 67 68 69 70
        on right: 60 61


State 0

    0 $accept: • sam "end of file"

    $default  reduce using rule 1 (sam)

    sam  go to state 1


State 1

    0 $accept: sam • "end of file"
    2 sam: sam • line

    "end of file"  shift, and go to state 2
    HEADER         shift, and go to state 3
    SEQUENCE       shift, and go to state 4
    READGROUP      shift, and go to state 5
    PROGRAM        shift, and go to state 6
    COMMENT        shift, and go to state 7
    QNAME          shift, and go to state 8
    CONTROLCHAR    shift, and go to state 9
    EOL            shift, and go to state 10

    line       go to state 11
    comment    go to state 12
    header     go to state 13
    sequence   go to state 14
    program    go to state 15
    readgroup  go to state 16
    alignment  go to state 17


State 2

    0 $accept: sam "end of file" •

    $default  accept


State 3

   12 header: HEADER • headerlist EOL

    HDVN  shift, and go to state 18
    HDSO  shift, and go to state 19
    HDGO  shift, and go to state 20
    TAB   shift, and go to state 21

    headerlist  go to state 22
    hdr         go to state 23


State 4

   19 sequence: SEQUENCE • sequencelist EOL

    SQSN  shift, and go to state 24
    SQLN  shift, and go to state 25
    SQAS  shift, and go to state 26
    SQM5  shift, and go to state 27
    SQSP  shift, and go to state 28
    SQUR  shift, and go to state 29
    TAB   shift, and go to state 30

    sequencelist  go to state 31
    sq            go to state 32


State 5

   39 readgroup: READGROUP • readgrouplist EOL

    VALUE  shift, and go to state 33
    RGID   shift, and go to state 34
    RGCN   shift, and go to state 35
    RGDS   shift, and go to state 36
    RGDT   shift, and go to state 37
    RGFO   shift, and go to state 38
    RGKS   shift, and go to state 39
    RGLB   shift, and go to state 40
    RGPG   shift, and go to state 41
    RGPI   shift, and go to state 42
    RGPL   shift, and go to state 43
    RGPM   shift, and go to state 44
    RGPU   shift, and go to state 45
    RGSM   shift, and go to state 46
    TAB    shift, and go to state 47

    readgrouplist  go to state 48
    rg             go to state 49


State 6

   29 program: PROGRAM • programlist EOL

    VALUE  shift, and go to state 50
    PGID   shift, and go to state 51
    PGPN   shift, and go to state 52
    PGCL   shift, and go to state 53
    PGPP   shift, and go to state 54
    PGDS   shift, and go to state 55
    PGVN   shift, and go to state 56

    programlist  go to state 57
    pg           go to state 58


State 7

   11 comment: COMMENT •

    $default  reduce using rule 11 (comment)


State 8

   58 alignment: QNAME • FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL EOL
   59          | QNAME • FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL optlist EOL

    FLAG  shift, and go to state 59


State 9

    4 line: CONTROLCHAR •

    $default  reduce using rule 4 (line)


State 10

    3 line: EOL •

    $default  reduce using rule 3 (line)


State 11

    2 sam: sam line •

    $default  reduce using rule 2 (sam)


State 12

    5 line: comment •

    $default  reduce using rule 5 (line)


State 13

    6 line: header •

    $default  reduce using rule 6 (line)


State 14

    7 line: sequence •

    $default  reduce using rule 7 (line)


State 15

    8 line: program •

    $default  reduce using rule 8 (line)


State 16

    9 line: readgroup •

    $default  reduce using rule 9 (line)


State 17

   10 line: alignment •

    $default  reduce using rule 10 (line)


State 18

   15 hdr: HDVN • VALUE

    VALUE  shift, and go to state 60


State 19

   16 hdr: HDSO • VALUE

    VALUE  shift, and go to state 61


State 20

   17 hdr: HDGO • VALUE

    VALUE  shift, and go to state 62


State 21

   18 hdr: TAB •

    $default  reduce using rule 18 (hdr)


State 22

   12 header: HEADER headerlist • EOL
   14 headerlist: headerlist • hdr

    HDVN  shift, and go to state 18
    HDSO  shift, and go to state 19
    HDGO  shift, and go to state 20
    TAB   shift, and go to state 21
    EOL   shift, and go to state 63

    hdr  go to state 64


State 23

   13 headerlist: hdr •

    $default  reduce using rule 13 (headerlist)


State 24

   22 sq: SQSN • VALUE

    VALUE  shift, and go to state 65


State 25

   23 sq: SQLN • VALUE

    VALUE  shift, and go to state 66


State 26

   24 sq: SQAS • VALUE

    VALUE  shift, and go to state 67


State 27

   25 sq: SQM5 • VALUE

    VALUE  shift, and go to state 68


State 28

   26 sq: SQSP • VALUE

    VALUE  shift, and go to state 69


State 29

   27 sq: SQUR • VALUE

    VALUE  shift, and go to state 70


State 30

   28 sq: TAB •

    $default  reduce using rule 28 (sq)


State 31

   19 sequence: SEQUENCE sequencelist • EOL
   21 sequencelist: sequencelist • sq

    SQSN  shift, and go to state 24
    SQLN  shift, and go to state 25
    SQAS  shift, and go to state 26
    SQM5  shift, and go to state 27
    SQSP  shift, and go to state 28
    SQUR  shift, and go to state 29
    TAB   shift, and go to state 30
    EOL   shift, and go to state 71

    sq  go to state 72


State 32

   20 sequencelist: sq •

    $default  reduce using rule 20 (sequencelist)


State 33

   55 rg: VALUE • VALUE

    VALUE  shift, and go to state 73


State 34

   42 rg: RGID • VALUE

    VALUE  shift, and go to state 74


State 35

   44 rg: RGCN • VALUE

    VALUE  shift, and go to state 75


State 36

   45 rg: RGDS • VALUE

    VALUE  shift, and go to state 76


State 37

   46 rg: RGDT • VALUE

    VALUE  shift, and go to state 77


State 38

   47 rg: RGFO • VALUE

    VALUE  shift, and go to state 78


State 39

   48 rg: RGKS • VALUE

    VALUE  shift, and go to state 79


State 40

   49 rg: RGLB • VALUE

    VALUE  shift, and go to state 80


State 41

   50 rg: RGPG • VALUE

    VALUE  shift, and go to state 81


State 42

   51 rg: RGPI • VALUE

    VALUE  shift, and go to state 82


State 43

   43 rg: RGPL • VALUE

    VALUE  shift, and go to state 83


State 44

   52 rg: RGPM • VALUE

    VALUE  shift, and go to state 84


State 45

   53 rg: RGPU • VALUE

    VALUE  shift, and go to state 85


State 46

   54 rg: RGSM • VALUE

    VALUE  shift, and go to state 86


State 47

   56 rg: TAB • TAB EOL
   57   | TAB • EOL

    TAB  shift, and go to state 87
    EOL  shift, and go to state 88


State 48

   39 readgroup: READGROUP readgrouplist • EOL
   41 readgrouplist: readgrouplist • rg

    VALUE  shift, and go to state 33
    RGID   shift, and go to state 34
    RGCN   shift, and go to state 35
    RGDS   shift, and go to state 36
    RGDT   shift, and go to state 37
    RGFO   shift, and go to state 38
    RGKS   shift, and go to state 39
    RGLB   shift, and go to state 40
    RGPG   shift, and go to state 41
    RGPI   shift, and go to state 42
    RGPL   shift, and go to state 43
    RGPM   shift, and go to state 44
    RGPU   shift, and go to state 45
    RGSM   shift, and go to state 46
    TAB    shift, and go to state 47
    EOL    shift, and go to state 89

    rg  go to state 90


State 49

   40 readgrouplist: rg •

    $default  reduce using rule 40 (readgrouplist)


State 50

   38 pg: VALUE •

    $default  reduce using rule 38 (pg)


State 51

   32 pg: PGID • VALUE

    VALUE  shift, and go to state 91


State 52

   33 pg: PGPN • VALUE

    VALUE  shift, and go to state 92


State 53

   34 pg: PGCL • VALUE

    VALUE  shift, and go to state 93


State 54

   35 pg: PGPP • VALUE

    VALUE  shift, and go to state 94


State 55

   36 pg: PGDS • VALUE

    VALUE  shift, and go to state 95


State 56

   37 pg: PGVN • VALUE

    VALUE  shift, and go to state 96


State 57

   29 program: PROGRAM programlist • EOL
   31 programlist: programlist • pg

    VALUE  shift, and go to state 50
    PGID   shift, and go to state 51
    PGPN   shift, and go to state 52
    PGCL   shift, and go to state 53
    PGPP   shift, and go to state 54
    PGDS   shift, and go to state 55
    PGVN   shift, and go to state 56
    EOL    shift, and go to state 97

    pg  go to state 98


State 58

   30 programlist: pg •

    $default  reduce using rule 30 (programlist)


State 59

   58 alignment: QNAME FLAG • RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL EOL
   59          | QNAME FLAG • RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL optlist EOL

    RNAME  shift, and go to state 99


State 60

   15 hdr: HDVN VALUE •

    $default  reduce using rule 15 (hdr)


State 61

   16 hdr: HDSO VALUE •

    $default  reduce using rule 16 (hdr)


State 62

   17 hdr: HDGO VALUE •

    $default  reduce using rule 17 (hdr)


State 63

   12 header: HEADER headerlist EOL •

    $default  reduce using rule 12 (header)


State 64

   14 headerlist: headerlist hdr •

    $default  reduce using rule 14 (headerlist)


State 65

   22 sq: SQSN VALUE •

    $default  reduce using rule 22 (sq)


State 66

   23 sq: SQLN VALUE •

    $default  reduce using rule 23 (sq)


State 67

   24 sq: SQAS VALUE •

    $default  reduce using rule 24 (sq)


State 68

   25 sq: SQM5 VALUE •

    $default  reduce using rule 25 (sq)


State 69

   26 sq: SQSP VALUE •

    $default  reduce using rule 26 (sq)


State 70

   27 sq: SQUR VALUE •

    $default  reduce using rule 27 (sq)


State 71

   19 sequence: SEQUENCE sequencelist EOL •

    $default  reduce using rule 19 (sequence)


State 72

   21 sequencelist: sequencelist sq •

    $default  reduce using rule 21 (sequencelist)


State 73

   55 rg: VALUE VALUE •

    $default  reduce using rule 55 (rg)


State 74

   42 rg: RGID VALUE •

    $default  reduce using rule 42 (rg)


State 75

   44 rg: RGCN VALUE •

    $default  reduce using rule 44 (rg)


State 76

   45 rg: RGDS VALUE •

    $default  reduce using rule 45 (rg)


State 77

   46 rg: RGDT VALUE •

    $default  reduce using rule 46 (rg)


State 78

   47 rg: RGFO VALUE •

    $default  reduce using rule 47 (rg)


State 79

   48 rg: RGKS VALUE •

    $default  reduce using rule 48 (rg)


State 80

   49 rg: RGLB VALUE •

    $default  reduce using rule 49 (rg)


State 81

   50 rg: RGPG VALUE •

    $default  reduce using rule 50 (rg)


State 82

   51 rg: RGPI VALUE •

    $default  reduce using rule 51 (rg)


State 83

   43 rg: RGPL VALUE •

    $default  reduce using rule 43 (rg)


State 84

   52 rg: RGPM VALUE •

    $default  reduce using rule 52 (rg)


State 85

   53 rg: RGPU VALUE •

    $default  reduce using rule 53 (rg)


State 86

   54 rg: RGSM VALUE •

    $default  reduce using rule 54 (rg)


State 87

   56 rg: TAB TAB • EOL

    EOL  shift, and go to state 100


State 88

   57 rg: TAB EOL •

    $default  reduce using rule 57 (rg)


State 89

   39 readgroup: READGROUP readgrouplist EOL •

    $default  reduce using rule 39 (readgroup)


State 90

   41 readgrouplist: readgrouplist rg •

    $default  reduce using rule 41 (readgrouplist)


State 91

   32 pg: PGID VALUE •

    $default  reduce using rule 32 (pg)


State 92

   33 pg: PGPN VALUE •

    $default  reduce using rule 33 (pg)


State 93

   34 pg: PGCL VALUE •

    $default  reduce using rule 34 (pg)


State 94

   35 pg: PGPP VALUE •

    $default  reduce using rule 35 (pg)


State 95

   36 pg: PGDS VALUE •

    $default  reduce using rule 36 (pg)


State 96

   37 pg: PGVN VALUE •

    $default  reduce using rule 37 (pg)


State 97

   29 program: PROGRAM programlist EOL •

    $default  reduce using rule 29 (program)


State 98

   31 programlist: programlist pg •

    $default  reduce using rule 31 (programlist)


State 99

   58 alignment: QNAME FLAG RNAME • POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL EOL
   59          | QNAME FLAG RNAME • POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL optlist EOL

    POS  shift, and go to state 101


State 100

   56 rg: TAB TAB EOL •

    $default  reduce using rule 56 (rg)


State 101

   58 alignment: QNAME FLAG RNAME POS • MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL EOL
   59          | QNAME FLAG RNAME POS • MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL optlist EOL

    MAPQ  shift, and go to state 102


State 102

   58 alignment: QNAME FLAG RNAME POS MAPQ • CIGAR RNEXT PNEXT TLEN SEQ QUAL EOL
   59          | QNAME FLAG RNAME POS MAPQ • CIGAR RNEXT PNEXT TLEN SEQ QUAL optlist EOL

    CIGAR  shift, and go to state 103


State 103

   58 alignment: QNAME FLAG RNAME POS MAPQ CIGAR • RNEXT PNEXT TLEN SEQ QUAL EOL
   59          | QNAME FLAG RNAME POS MAPQ CIGAR • RNEXT PNEXT TLEN SEQ QUAL optlist EOL

    RNEXT  shift, and go to state 104


State 104

   58 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT • PNEXT TLEN SEQ QUAL EOL
   59          | QNAME FLAG RNAME POS MAPQ CIGAR RNEXT • PNEXT TLEN SEQ QUAL optlist EOL

    PNEXT  shift, and go to state 105


State 105

   58 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT • TLEN SEQ QUAL EOL
   59          | QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT • TLEN SEQ QUAL optlist EOL

    TLEN  shift, and go to state 106


State 106

   58 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN • SEQ QUAL EOL
   59          | QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN • SEQ QUAL optlist EOL

    SEQ  shift, and go to state 107


State 107

   58 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ • QUAL EOL
   59          | QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ • QUAL optlist EOL

    QUAL  shift, and go to state 108


State 108

   58 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL • EOL
   59          | QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL • optlist EOL

    OPTTAG   shift, and go to state 109
    OPTITAG  shift, and go to state 110
    OPTZTAG  shift, and go to state 111
    OPTBTAG  shift, and go to state 112
    EOL      shift, and go to state 113

    optlist  go to state 114
    opt      go to state 115


State 109

   62 opt: OPTTAG • OPTATYPE OPTAVALUE
   63    | OPTTAG • OPTITYPE OPTIVALUE
   64    | OPTTAG • OPTFTYPE OPTFVALUE
   65    | OPTTAG • OPTZTYPE OPTZVALUE
   66    | OPTTAG • OPTHTYPE OPTHVALUE
   67    | OPTTAG • OPTBTYPE OPTBVALUE

    OPTATYPE  shift, and go to state 116
    OPTITYPE  shift, and go to state 117
    OPTFTYPE  shift, and go to state 118
    OPTZTYPE  shift, and go to state 119
    OPTHTYPE  shift, and go to state 120
    OPTBTYPE  shift, and go to state 121


State 110

   68 opt: OPTITAG • OPTITYPE OPTIVALUE

    OPTITYPE  shift, and go to state 122


State 111

   69 opt: OPTZTAG • OPTZTYPE OPTZVALUE

    OPTZTYPE  shift, and go to state 123


State 112

   70 opt: OPTBTAG • OPTBTYPE OPTBVALUE

    OPTBTYPE  shift, and go to state 124


State 113

   58 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL EOL •

    $default  reduce using rule 58 (alignment)


State 114

   59 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL optlist • EOL
   61 optlist: optlist • opt

    OPTTAG   shift, and go to state 109
    OPTITAG  shift, and go to state 110
    OPTZTAG  shift, and go to state 111
    OPTBTAG  shift, and go to state 112
    EOL      shift, and go to state 125

    opt  go to state 126


State 115

   60 optlist: opt •

    $default  reduce using rule 60 (optlist)


State 116

   62 opt: OPTTAG OPTATYPE • OPTAVALUE

    OPTAVALUE  shift, and go to state 127


State 117

   63 opt: OPTTAG OPTITYPE • OPTIVALUE

    OPTIVALUE  shift, and go to state 128


State 118

   64 opt: OPTTAG OPTFTYPE • OPTFVALUE

    OPTFVALUE  shift, and go to state 129


State 119

   65 opt: OPTTAG OPTZTYPE • OPTZVALUE

    OPTZVALUE  shift, and go to state 130


State 120

   66 opt: OPTTAG OPTHTYPE • OPTHVALUE

    OPTHVALUE  shift, and go to state 131


State 121

   67 opt: OPTTAG OPTBTYPE • OPTBVALUE

    OPTBVALUE  shift, and go to state 132


State 122

   68 opt: OPTITAG OPTITYPE • OPTIVALUE

    OPTIVALUE  shift, and go to state 133


State 123

   69 opt: OPTZTAG OPTZTYPE • OPTZVALUE

    OPTZVALUE  shift, and go to state 134


State 124

   70 opt: OPTBTAG OPTBTYPE • OPTBVALUE

    OPTBVALUE  shift, and go to state 135


State 125

   59 alignment: QNAME FLAG RNAME POS MAPQ CIGAR RNEXT PNEXT TLEN SEQ QUAL optlist EOL •

    $default  reduce using rule 59 (alignment)


State 126

   61 optlist: optlist opt •

    $default  reduce using rule 61 (optlist)


State 127

   62 opt: OPTTAG OPTATYPE OPTAVALUE •

    $default  reduce using rule 62 (opt)


State 128

   63 opt: OPTTAG OPTITYPE OPTIVALUE •

    $default  reduce using rule 63 (opt)


State 129

   64 opt: OPTTAG OPTFTYPE OPTFVALUE •

    $default  reduce using rule 64 (opt)


State 130

   65 opt: OPTTAG OPTZTYPE OPTZVALUE •

    $default  reduce using rule 65 (opt)


State 131

   66 opt: OPTTAG OPTHTYPE OPTHVALUE •

    $default  reduce using rule 66 (opt)


State 132

   67 opt: OPTTAG OPTBTYPE OPTBVALUE •

    $default  reduce using rule 67 (opt)


State 133

   68 opt: OPTITAG OPTITYPE OPTIVALUE •

    $default  reduce using rule 68 (opt)


State 134

   69 opt: OPTZTAG OPTZTYPE OPTZVALUE •

    $default  reduce using rule 69 (opt)


State 135

   70 opt: OPTBTAG OPTBTYPE OPTBVALUE •

    $default  reduce using rule 70 (opt)
